# CS2-LUA

./: CMakeLists.txt  CS2HexSyncCompatDriver.sys  README.md  build_reconstructed_dll.bat  build_vs2022.bat  help.md  进度.md
api-wiki/: API.md  index.html
scripts/: 11_test.lua  Lobby Command.lua  ai_memory_test.lua  api_full_test.lua  build.ps1  changename_test.lua  chat_roll.lua  deepseek_ai.lua  deepseek_config.example.lua  entity_test.lua  example.lua  generate_offsets_lua.py  kill_say.lua  luajit_utils_test.lua  luv8_test.lua  network_test.lua  nl_compat.lua  panorama_compat.lua  player_hurt_test.lua  ui_test.lua
src/injector/: driver_service.cpp  driver_service.hpp  hexsync_client.cpp  hexsync_client.hpp  injector_resources.h  main.cpp
src/plugin/: dllmain.cpp  plugin.cpp  plugin.hpp
src/plugin/events/: game_events.cpp  game_events.hpp
src/plugin/lua/: embedded_libraries.cpp  embedded_libraries.hpp  embedded_libraries.rc  embedded_library_resources.h  lua_engine.cpp  lua_engine.hpp
src/plugin/lua/libraries/: entity_compat.lua  entity_offsets.lua  nl_compat.lua  offsets.lua  panorama_compat.lua  panorama_compat.moon
src/plugin/ui/: menu.cpp  menu.hpp
